fix: layout shift, alt tag

--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -85,3 +85,8 @@ button {
 p {
     margin: 0 0 0.5rem 0;
 }
+
+img {
+    width: 75px;
+    height: 75px;
+}
